# agent-systems-book

./: .env.example  README.md
Chapter-11/: .dockerignore  .gitignore  .mcp.json  README.md  UPGRADE.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
Chapter-11/agent_framework/: config.py
Chapter-11/agent_framework/bootstrap/: entry.py  tenant_pool.py
Chapter-11/agent_framework/domain/: a2a_spec.py  agent_catalog.py  agent_factory.py  domain_config.py  domain_prompts.py  dynamic_registry_persist.py  entrypoint_loader.py  plugin_registry.py  task_planner.py
Chapter-11/agent_framework/i18n/: locale.py
Chapter-11/agent_framework/infra/: agent_runtime.py  checkpoint_factory.py  concurrency.py
Chapter-11/agent_framework/observability/: request_context.py
Chapter-11/agent_framework/optimization/: __init__.py  agent_mini_pipeline.py  agent_pipeline.py  agent_prompt_store.py  objective.py  planner_pipeline.py  planner_runtime.py  prompt_store.py  routing_assignment.py
Chapter-11/agent_framework/orchestration/: __init__.py  thread_stage_context.py
Chapter-11/agent_framework/prompts/: platform_defaults.py
Chapter-11/agent_framework/router/: __init__.py  engine.py  observability.py  plan.py  pre_survey_bridge.py  profile.py  skills_format.py  stream_events.py
Chapter-11/agent_framework/stream/: events.py  sse.py
Chapter-11/agent_framework/tracing/: setup.py  trace_provider.py
Chapter-11/data/: jobs.db
Chapter-11/docs/: a2a_server.md  domains.md  operations.md  orchestration_model.md  plugin_development.md  prompt_evolution.md  router_engine.md  sdk_integration.md  security.md
Chapter-11/domains/: pyproject.toml
Chapter-11/domains/customer_service/: plugin.py  prompt_bundle.py  prompts_en.py  specs.py
Chapter-11/domains/travel/: guess_rules.py  plan_context.py  plugin.py  (+2 more)
Chapter-11/logs/: 2026-06-24_09-27-41.jsonl  2026-06-24_09-32-29.jsonl  2026-06-24_10-31-47.jsonl  2026-06-24_10-45-47.jsonl  2026-06-24_10-52-19.jsonl  2026-06-24_10-57-20.jsonl
Chapter-11/notebooks/: planner_b1_textgrad_graph.ipynb  planner_e2e_textgrad_graph.ipynb
Chapter-11/scripts/: eval_travel_agent_pipeline.py  eval_travel_agents.py  eval_travel_decomposition.py  eval_travel_e2e.py  eval_travel_routing.py  export_domain_locales.py  flight_agent_test.py  ingest_knowledge.py  optimize_travel_agent.py  optimize_travel_agent_pipeline.py  optimize_travel_decomposition.py  optimize_travel_decomposition_graph.py  optimize_travel_decomposition_textgrad.py  optimize_travel_planner.py  optimize_travel_planner_e2e.py  optimize_travel_routing.py  optimize_travel_routing_textgrad.py  product_readiness_check.py  run_demo.py  run_legacy.py  run_router.py  smoke_router_client.py  sync_package_versions.py  weather_agent_test.py
Chapter-11/services/: __init__.py
Chapter-11/tests/: README.md  conftest.py  test_agent_pipeline.py  test_domain_task_planner.py  test_e2e_collect.py  test_e2e_tool_data.py  test_mcp_server.py  test_mini_pipeline.py  test_optimization_core_textgrad.py  test_phase10_router.py  test_phase12_dynamic_registry.py  test_phase15_product.py  test_phase16_product.py  test_phase18_product.py  test_phase19_product.py  test_phase20_product.py  test_phase21_product.py  test_phase24_i18n.py  test_phase24_p2.py  test_phase24_product.py  test_phase24_registry.py  test_phase25_kb_benchmark.py  test_phase25_kb_tenant.py  test_phase25_registry_federation.py  test_phase25_router_client.py  test_phase26_demo_web.py  test_phase26_version_sync.py  test_phase27_travel_router.py  test_phase28_pre_survey_mode.py  test_phase7_a2a.py  test_phase8_observability.py  test_phase8b_metrics.py  test_planner_pipeline.py  test_platform_plugin.py  test_run_demo_legacy_graph.py  test_textgrad_agent_graph.py  test_textgrad_graph.py  test_textgrad_graph_e2e.py  test_travel_decomposition_benchmark.py  test_travel_decomposition_optimizer.py  (+4 more)
Chapter-6/: README.md  aggregation_helpers.py  central_agent_demo.ipynb  central_orchestrator.py  execution_helpers.py  memory_factory.py  memory_system.py  prompts.py  pyproject.toml  requirements.txt  sub_agents.py  task_planner.py  travel_common.py  weather_mcp.py
Chapter-6/chapter6/: __init__.py  paths.py
Chapter-6/fixed_graph/: README.md  __init__.py  bootstrap.py  graph.py  nodes.py  orchestrator.py  run_demo.py  show_graph.py  test.py  visualize.py
Chapter-6/langgraph/: README.md  __init__.py  _ch6_loader.py  graph.py  orchestrator.py  run_demo.py  state.py  test.py  visualize.py
Chapter-6/langgraph_demo/: README.md  __init__.py  _ch6_loader.py  nodes.py  show_graph.py  test.py
Chapter-6/supervisor/: README.md  __init__.py  _ch6_loader.py  agents.py  bootstrap.py  local_supervisor.py  memory_factory.py  memory_system.py  orchestrator.py  planned_pipeline.py  supervisor_graph.py  task_planner.py  test.py  travel_common.py
Chapter-8/: README.md  pyproject.toml  requirements.txt
Chapter-8-20260616/domains/: __init__.py  pyproject.toml
Chapter-8/agent_framework/: config.py
Chapter-8/book/: agent_definitions.py  central_agent_demo_short.py
Chapter-8/domains/: __init__.py
Chapter-8/scripts/: run_demo.py  travel_agent_mcp_server.py
Chapter-8/tests/: conftest.py  test_planner.py  test_trace_provider.py  test_tracing.py
Chapter-8/travel_multi_agent/: __init__.py  config.py
(+466 files in other folders)
