[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "travel-multi-agent"
version = "0.2.0"
description = "Multi-agent orchestration framework with LangGraph fixed graph"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "langgraph>=0.0.30",
    "grandalf>=0.8",
    "chromadb>=0.4.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_framework*", "domains*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
